--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
             <canvas id="canvas"></canvas>
         </div>
     </div>
-    <script src="app.js"></script>
+    <script src="scripts/app.js"></script>
 </body>
 </html>
