--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                         <option>Insertion Sort</option>
                         <option>Merge Sort</option>
                         <option>Heap Sort</option>
+                        <option>Quicksort</option>
                     </select>
                 </li>
                 <li>
