--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
                 <li>
                     <select id="alg-selector">
                         <option>Insertion Sort</option>
-                        <option>Bubble Sort</option>
+                        <!--<option>Bubble Sort</option>-->
                         <option>Merge Sort</option>
                         <option>Heap Sort</option>
                         <option>Quicksort</option>
                     </select>
                 </li>
-                <li>
-                    Width<br> 
-                    <input type="range" id="range-selector" min = "50" max = "600" value="500" oninput = "range_event()">
+                <li id="rangebox">
+                    Bar Width
+                    <input type="range" id="range-selector" min = "50" max = "795" value="500">
                 </li>
             </ul>
         </div>
