--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <canvas id="canvas"></canvas>
         </div>
     </div>
+    <script src="scripts/algorithms.js"></script>
     <script src="scripts/app.js"></script>
 </body>
 </html>
