Fixed Bubble Sort

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <li>
                     <select id="alg-selector">
                         <option>Insertion Sort</option>
-                        <!--<option>Bubble Sort</option>-->
+                        <option>Bubble Sort</option>
                         <option>Merge Sort</option>
                         <option>Heap Sort</option>
                         <option>Quicksort</option>
